--- a/languages/styles/main.css
+++ b/languages/styles/main.css
@@ -35,8 +35,9 @@ a:visited{
     position: absolute;
     margin-top: 50px;
     width: 10%;
+    min-width: 120px;
     left: 0%;
-    padding-left: 2%;
+    padding-left: 15px;
     padding-bottom: 15px;
     color: #00FF00
 }
