--- a/styles/Custom_formating.css
+++ b/styles/Custom_formating.css
@@ -17,7 +17,7 @@ and open the template in the editor.
 }
 
 body{
-    background-image: url(res/background.png)
+    background-image: url(/res/background.png)
 }
 
 .quote {
