--- a/styles/Custom_formating.css
+++ b/styles/Custom_formating.css
@@ -7,7 +7,8 @@ and open the template in the editor.
     Created on : 03-Nov-2014, 11:10:41
     Author     : toby
 */
-.h1 {
+
+h1 {
     font-size: 6vh;
     text-align: center;
 }
