changed something, not sure what or my fault blame Json

--- a/styles/main.css
+++ b/styles/main.css
@@ -30,7 +30,7 @@ a:visited{
 
 .main_body {                /* This controls the "body" of the main central column i.e. not the title */
     margin-top: 20px;
-    color: #FFFFFF;
+    color: #e31010;
 }
 .quote {
 	color: #FF8000;
