--- a/styles/Custom_formating.css
+++ b/styles/Custom_formating.css
@@ -3,7 +3,7 @@ To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
-/* 
+/*
     Created on : 03-Nov-2014, 11:10:41
     Author     : toby
 */
@@ -18,13 +18,11 @@ h1 {
 }
 
 body{
-    background-image: url(/res/background.png)
+    background-image: url(../res/background.png)
 }
 
 .quote {
     color: orangered;
     text-align: center;
-    
+
 }
-
-
