--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5223,7 +5223,7 @@ a.list-group-item-danger.active:focus {
 }
 .panel-primary > .panel-heading .badge {
   color: #428bca;
-  background-color: #fff;
+  background-color: #010000;
 }
 .panel-primary > .panel-footer + .panel-collapse > .panel-body {
   border-bottom-color: #428bca;
@@ -5298,7 +5298,7 @@ a.list-group-item-danger.active:focus {
   background-color: #a94442;
 }
 .panel-danger > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #ebccd1;
+  border-bottom-color: #030000;
 }
 .embed-responsive {
   position: relative;
@@ -5329,14 +5329,14 @@ a.list-group-item-danger.active:focus {
   min-height: 20px;
   padding: 19px;
   margin-bottom: 20px;
-  border: 1px solid #e3e3e3;
+  border: 1px solid #000000;
   border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
-          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+  -webkit-box-shadow: inset 0 1px 1px #000000;
+          box-shadow: inset 0 1px 1px #000000;
 }
 .well blockquote {
-  border-color: #ddd;
-  border-color: rgba(0, 0, 0, .15);
+  border-color: #030000;
+  border-color: #030000;
 }
 .well-lg {
   padding: 24px;
@@ -5352,7 +5352,7 @@ a.list-group-item-danger.active:focus {
   font-weight: bold;
   line-height: 1;
   color: #000;
-  text-shadow: 0 1px 0 #fff;
+  text-shadow: 0 1px 0 #030000;
   filter: alpha(opacity=20);
   opacity: .2;
 }
