Added sessions css

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,4 +13,9 @@
 
     <link rel="stylesheet" href="styles/Custom_formating.css"/>
 
+    {% if page.categories contains 'sessions' %}
+    <link rel="stylesheet" href="styles/sessions.css"/> 
+    {% endif %}
+
+
 </head>
