--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,11 +15,11 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li><a href="sessions.html">Past Sessions</a></li>
-                        <li class="dropdown">
+                        <li {% if page.categories contains 'sessions' %}class="active"{% endif %}><a href="sessions.html">Past Sessions</a></li>
+                        <li class="dropdown{% if page.categories contains 'inspiration' %} active{% endif%}">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Inspiration<span class="caret"></span></a>
                             <ul class="dropdown-menu multi-level" role="menu">
-                            <li><a href="inspiration.html">Inspiration</a></li>
+                            <li {% if page.title 'Inspiration' %}class="active"{% endif %}><a href="inspiration.html">Inspiration</a></li>
                                 <li class="dropdown-submenu">
                                     <a tabindex="-1" href="#">Languages</a>
                                     <ul class="dropdown-menu">
