--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,19 +2,19 @@
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
     <!-- jQuery JavaScript -->
-    <script src="js/jquery-2.1.1.js"></script>
+    <script src="{{ site.baseurl }}/js/jquery-2.1.1.js"></script>
     <!-- bootstrap JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
 
     <!-- bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap.min.css">
     <!-- bootstrap theme -->
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap-theme.min.css">
 
-    <link rel="stylesheet" href="styles/Custom_formating.css"/>
+    <link rel="stylesheet" href="{{ site.baseurl }}/styles/Custom_formating.css"/>
 
     {% if page.categories contains 'sessions' %}
-    <link rel="stylesheet" href="styles/sessions.css"/> 
+    <link rel="stylesheet" href="{{ site.baseurl }}/styles/sessions.css"/> 
     {% endif %}
 
 
