Moved repeated div tags to default layout

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,11 +11,10 @@
     <!-- bootstrap theme -->
     <link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap-theme.min.css">
 
-    <link rel="stylesheet" href="{{ site.baseurl }}/styles/Custom_formating.css"/>
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/custom.css"/>
 
     {% if page.categories contains 'sessions' %}
-    <link rel="stylesheet" href="{{ site.baseurl }}/styles/sessions.css"/> 
+        <link rel="stylesheet" href="{{ site.baseurl }}/css/sessions.css"/> 
     {% endif %}
-
 
 </head>
