--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,17 +4,13 @@
   {% include head.html %}
 
   <body>
-
-    {% include header.html %}
-
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
+    <div class="container">
+        {% include header.html %}
+        <div class="mainbody">
+            {{ content }}
+        </div>
+        {% include footer.html %}
     </div>
-
-    {% include footer.html %}
-
   </body>
 
 </html>
