2 columns for languages

--- a/css/custom.css
+++ b/css/custom.css
@@ -19,3 +19,13 @@ body{
     color: orangered;
     text-align: center;
 }
+
+ul{
+	overflow:hidden;
+}
+
+li.double{ 
+	float:left;
+    width:50%;
+}
+
