--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,6 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 
-    <script type="text/javascript" src="js/multimenu.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/multimenu.css" />
+    <link href="/css/flexnav.css" rel="stylesheet" type="text/css" / >
+
 </head>
