--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 
-    <link href="/css/flexnav.css" rel="stylesheet" type="text/css" / >
-
+<script src="http://code.jquery.com/jquery-1.9.1.js" type="text/javascript"></script> 
+<script src="/js/jquery.flexnav.min.js" type="text/javascript"></script>
+<link href="/css/flexnav.css" media="screen, projection" rel="stylesheet" type="text/css">
 </head>
