--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,8 @@
       </div>
     </nav> -->
 
-<ul>
+<nav>
+<ul data-breakpoint="800" class="flexnav">
 {% for i in site.data.menu %}
     <li><a class="page-link" href="{{ i.url | prepend: site.baseurl }}">{{ i.text }}</a>
         <ul>
@@ -40,6 +41,9 @@
     </li>
 {% endfor %}
 </ul>
-
+</nav>
+<script type="text/javascript">
+$(".flexnav").flexNav();
+</script>
   </div>
 </header>
