--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,10 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 
+    {% if page.categories contains 'sessions' %}
+        <link rel="stylesheet" href="{{ "/css/sessions.css" | prepend: site.baseurl }}">
+    {% endif %}
+
 <script src="http://code.jquery.com/jquery-1.9.1.js" type="text/javascript"></script> 
 <script src="/js/jquery.flexnav.min.js" type="text/javascript"></script>
 <link href="/css/flexnav.css" media="screen, projection" rel="stylesheet" type="text/css">
