--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,6 +42,9 @@
 {% endfor %}
 </ul>
 </nav>
+<div class="menu-button">Menu</div>
+
+
 <script type="text/javascript">
 $(".flexnav").flexNav();
 </script>
