--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,11 +23,12 @@
       </div>
     </nav> -->
 
+<div class="menu-button">Menu</div>
 <nav>
 <ul data-breakpoint="800" class="flexnav">
 {% for i in site.data.menu %}
     <li><a class="page-link" href="{{ i.url | prepend: site.baseurl }}">{{ i.text }}</a>
-        <ul>
+        {% if i.subitems %}<ul>
             {% for j in i.subitems %}
                 <li><a class="page-link" href="{{ j.url | prepend: site.baseurl }}">{{ j.text }}</a>
                     <ul>
@@ -37,12 +38,11 @@
                     </ul>
                 </li>
             {% endfor %}
-        </ul>
+        </ul>{% endif %}
     </li>
 {% endfor %}
 </ul>
 </nav>
-<div class="menu-button">Menu</div>
 
 
 <script type="text/javascript">
