--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 <div class="post">
+  <div class="main">
 
   <header class="post-header">
     <h1>{{ page.title }}</h1>
@@ -10,5 +11,6 @@ layout: default
   <article class="post-content">
   {{ content }}
   </article>
+  </div>
 
 </div>
