--- a/css/flexnav.css
+++ b/css/flexnav.css
@@ -33,8 +33,8 @@
     padding: .5em;
     z-index: 2;
     overflow: hidden;
-    color: #222222;
-    background: #a6a6a2;
+    color: #FFFFFF;
+    background: #000000;
     border-bottom: 1px solid rgba(0, 0, 0, 0.15); }
   .flexnav li ul {
     width: 100%; }
@@ -46,11 +46,11 @@
     overflow: visible; }
   .flexnav li ul li a {
     display: block;
-    background: #b2b2af; }
+    background: #111111; }
   .flexnav ul li ul li a {
-    background: #bfbfbc; }
+    background: #222222; }
   .flexnav ul li ul li ul li a {
-    background: #cbcbc9; }
+    background: #333333; }
   .flexnav .touch-button {
     position: absolute;
     z-index: 999;
@@ -68,14 +68,14 @@
       position: relative;
       top: .5em;
       font-size: 12px;
-      color: #666; }
+      color: #FFFFFF; }
 
 .menu-button {
   position: relative;
   display: block;
   padding: .5em;
-  background: #a6a6a2;
-  color: #222222;
+  background: #000000;
+  color: #FFFFFF;
   cursor: pointer;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2); }
   .menu-button.one-page {
@@ -97,7 +97,7 @@
       font-size: 16px;
       position: relative;
       top: .5em;
-      color: #666; }
+      color: #FFFFFF; }
 
 @media all and (min-width: 800px) {
   body.one-page {
@@ -116,7 +116,7 @@
       list-style: none;
       float: left;
       display: block;
-      background-color: #a6a6a2;
+      background-color: #000000;
       overflow: visible;
       width: 20%; }
     .flexnav li a {
@@ -160,7 +160,7 @@
     list-style: none;
     float: left;
     display: block;
-    background-color: #a6a6a2;
+    background-color: #000000;
     width: 20%;
     min-height: 50px;
     overflow: visible; }
@@ -176,7 +176,7 @@
     border-bottom: none;
     overflow: visible; }
   .oldie .flexnav li > ul {
-    background: #acaca1;
+    background: #000000;
     position: absolute;
     top: auto;
     left: 0;
