--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,8 @@ a:visited { color: #205caa; }
   border-bottom: 1px solid #e8e8e8;
   min-height: 56px;*/
   background: #111111;
+  position: fixed;
+  width: 100%;
 }
 
 .site-title,
@@ -137,7 +139,7 @@ a:visited { color: #205caa; }
 /* ----------------------------------------------------------*/
 
 .page-content {
-  padding: 30px 0;
+  padding: 75px 0;
 }
 
 .main{ 
