--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 <div class="post">
+  <div class="main">
 
   <header class="post-header">
     <h1>{{ page.title }}</h1>
@@ -11,5 +12,5 @@ layout: default
   <article class="post-content">
   {{ content }}
   </article>
-
+  </div>
 </div>
