Adding some pictures to blog post

--- a/css/main.css
+++ b/css/main.css
@@ -141,7 +141,7 @@ a:visited { color: #205caa; }
   padding: 25px 0;
 }
 
-.main{ 
+.main{
     background-color: #000000;
     padding: 10px
 }
@@ -163,7 +163,7 @@ ul.double{
 	overflow:hidden;
 }
 
-li.double{ 
+li.double{
 	float:left;
     width:50%;
 }
@@ -435,3 +435,9 @@ li.double{
 .video figure { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; }
 
 .video iframe, .video object, .video embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+
+img { border: 0;
+      width: 70%;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;}
