--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    <link rel="icon" href="{{ "/favicon.ico" | prepend:site.baseurl}}" type="image/x-icon" />
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
@@ -14,7 +15,7 @@
         <link rel="stylesheet" href="{{ "/css/sessions.css" | prepend: site.baseurl }}">
     {% endif %}
 
-    <script src="http://code.jquery.com/jquery-1.9.1.js" type="text/javascript"></script> 
+    <script src="http://code.jquery.com/jquery-1.9.1.js" type="text/javascript"></script>
     <script src="/js/jquery.flexnav.min.js" type="text/javascript"></script>
     <link href="/css/flexnav.css" media="screen, projection" rel="stylesheet" type="text/css">
 </head>
