--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ body {
   color: #FFFFFF;
   line-height: 1.5;
   font-weight: 300;
-  background-image: url(../images/background.png);
+  background-image: url(../Graphics/images/background.png);
   background-attachment: fixed;
 }
 
