--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,7 @@ layout: default
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
         var disqus_shortname = 'codeclub'; // required: replace example with your forum shortname
-        var disques_identifier = '{{ post.title }}'
+        var disques_identifier = '{{ post.title }}';
 
         /* * * DON'T EDIT BELOW THIS LINE * * */
         (function() {
