--- a/css/main.css
+++ b/css/main.css
@@ -142,30 +142,30 @@ a:visited { color: #205caa; }
 }
 
 .main{
-    background-color: #000000;
-    padding: 10px
+  background-color: #000000;
+  padding: 10px
 }
 
 .quote {
-    color: orangered;
-    text-align: center;
+  color: orangered;
+  text-align: center;
 }
 
 a:link{
-	color: #FFFF00;
+  color: #FFFF00;
 }
 
 a:visited{
-	color: #FFFF50;
+  color: #FFFF50;
 }
 
 ul.double{
-	overflow:hidden;
+  overflow:hidden;
 }
 
 li.double{
-	float:left;
-    width:50%;
+  float:left;
+  width:50%;
 }
 
 /* Home styles */
@@ -428,16 +428,30 @@ li.double{
     clear: both;
     width: auto;
     margin: 0 0 15px; }
-
 }
 
 /* responsive videos */
-.video figure { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; }
+.video figure {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+}
 
-.video iframe, .video object, .video embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+.video iframe,
+.video object,
+.video embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
-img { border: 0;
-      width: 70%;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;}
+img { 
+  border: 0;
+  width: 70%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
