--- a/css/main.css
+++ b/css/main.css
@@ -241,7 +241,7 @@ a:visited{
   letter-spacing: -1px;
 }
 
-.post-content h6 {
+.post-content em {
   line-height: 1;
   font-weight: 1;
   font-size: 2em;
