fixing some things

--- a/css/slicknav.css
+++ b/css/slicknav.css
@@ -2,12 +2,12 @@
     Mobile Menu Core Style
 */
 
-.slicknav_btn { position: relative; display: block; vertical-align: center; float: left; line-height: 1em; cursor: pointer; }
+.slicknav_btn { position: relative; display: lines; vertical-align: center; float: left; line-height: 1em; cursor: pointer; }
 .slicknav_menu  .slicknav_menutxt { display: block; line-height: 1.188em; float: left; }
 .slicknav_menu .slicknav_icon { float: left; margin: 0.188em 0 0 0.438em; }
 .slicknav_menu .slicknav_no-text { margin: 0 }
-.slicknav_menu .slicknav_icon-bar { display: block; width: 1em; height: 0.125em; -webkit-border-radius: 1px; -moz-border-radius: 1px; border-radius: 1px; -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25); -moz-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25); box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25); }
-.slicknav_btn .slicknav_icon-bar + .slicknav_icon-bar { margin-top: 0.1em }
+.slicknav_menu .slicknav_icon-bar { display: block; width: 1em; height: 0.125em; -webkit-border-radius: 1px; -moz-border-radius: 1px; border-radius: 1px; -webkit-box-shadow: 0 1px 0 rgb(41, 251, 0); -moz-box-shadow: 0 1px 0 rgb(34, 255, 0); box-shadow: 0 1px 0 rgb(34, 255, 0); }
+.slicknav_btn .slicknav_icon-bar + .slicknav_icon-bar { margin-top: 1em , background-color: rgb(34, 255, 0) }
 .slicknav_nav { clear: both }
 .slicknav_nav ul,
 .slicknav_nav li { display: block }
@@ -48,7 +48,7 @@
 }
 /* Button Lines */
 .slicknav_menu .slicknav_icon-bar {
-  background-color: #f6f5f5;
+  background-color: #0df801;
 }
 .slicknav_menu {
     background:#000000;
