--- a/css/flexnav.css
+++ b/css/flexnav.css
@@ -118,7 +118,7 @@
       display: block;
       background-color: #000000;
       overflow: visible;
-      width: 16.666666666%; }
+      width: 16%; }
     .flexnav li a {
       border-left: 1px solid #ffff00;
       border-bottom: none;
@@ -162,7 +162,7 @@
     float: left;
     display: block;
     background-color: #000000;
-    width: 16.666666666%;
+    width: 16%;
     min-height: 50px;
     overflow: visible; }
   .oldie .flexnav li:hover > ul {
