--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
+    <meta name="keywords" content="{{ site.keywords }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="icon" href="{{ "/favicon.png" | prepend:site.baseurl}}" type="image/x-icon" />
 
