Fix css issues on narrow displays. #36

--- a/_includes/catmenu.html
+++ b/_includes/catmenu.html
@@ -1,4 +1,5 @@
-   <div class="blog-cats">
+<div class="cat-wrapper">
+<div class="blog-cats">
 
      <h5><a href="{{site.baseurl}}/blog/index.html">All Posts</a></h5>
 
@@ -10,4 +11,5 @@
          <li><a href="{{site.baseurl/blog/}}{{cat | first}}.html">{{cat | first}}</a> ({{cat[1] | size}})</li>
      {% endfor %}
      </ul>
-   </div>
+</div>
+</div>
