Hopefully fixed sessions.html error after jumping through many many hoops

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-
-  {% include head.html %}
-
+<head>
+  {% include common_head.html %}
+</head>
     <body>
 
     {% include header.html %}
