No external-internal links in the templates

--- a/_includes/post_link.html
+++ b/_includes/post_link.html
@@ -1,6 +1,6 @@
       <li>
         <h4>
-          <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+          <a class="post-link" href="{{post.url}}">{{ post.title }}</a>
         </h4>
         <span class="post-date">
 	  <p>{{ post.date | date: "%b %-d, %y" }}, Written by {{post.author}}</p>
