--- a/_layouts/language.html
+++ b/_layouts/language.html
@@ -21,7 +21,7 @@ layout: default
   <ul>
     {% for post in tutorials %}
         {% if post.tags contains {{page.language}} and post.tags contains "getstarted" %}
-            <li><a href="{{post.url | prepend: site.baseurl}}">{{post.title}}</a></li>
+        <li><a href="{{post.url}}">{{post.title}}</a></li>
         {% endif %}
     {% endfor %}
   </ul>
@@ -35,7 +35,7 @@ layout: default
     {% for post in tutorials %}
         {% if post.tags contains {{page.language}} %}
             {% unless post.tags contains "getstarted"%}
-              <li><a href="{{post.url | prepend: site.baseurl}}">{{post.title}}</a></li>
+              <li><a href="{{post.url}}">{{post.title}}</a></li>
             {% endunless %}
         {% endif %}
     {% endfor %}
