--- a/_includes/catmenu.html
+++ b/_includes/catmenu.html
@@ -1,7 +1,7 @@
 <div class="cat-wrapper">
 <div class="blog-cats">
 
-     <h5><a href="{{site.baseurl}}/blog/index.html">All Posts</a></h5>
+     <h5><a href="/blog/index.html">All Posts</a></h5>
 
      <h5>Posts by Category</h5>
 
