--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -5,11 +5,20 @@ layout: default
 <div class="post">
   <div class="main">
 
+    {% assign project = site.data.projects[page.project] %}
+
     <header class="post-header">
-      <h1>{{page.title}}</h1>
+      <h1>{{project.name}}</h1>
     </header>
 
     <article class="post-content">
+
+      <h3>About</h3>
+
+      <p>
+	{{project.description}}
+      </p>
+
       {{content}}
 
       <h3>Getting Started</h3>
