Adding project pages
Projects now get their own page on the website this means the following:

- Projects now get a list of tutorials that are written about them
  automatically added their page, as well as some information
  automatically extracted from `projects.yml`
- Projects now have a `tag` attribute in their entry in `projects.yml`
  relevant tutorials _must_ be tagged with this tag and `getstarted`
  for them to show up on the correct page
- This tag is also used to generate links to the project page so any new
  <project>.md file in `/projects/` _must_ match the tag  _exactly_ to
  be accessible from the website.
- A <project>.md page requires the following YAML front matter
  ```
  ---
  layout: project
  project: <name>
  ---
  ```
  where <name> is _exactly_ what is written as the top level name for
  the project in `projects.yml`.. For example the entry for the code
  club website in `projects.yml` now looks like the following:
  ```
  ccweb:
      name: "Code Club Website"
      github: ...
      description: ...
      ....
  ```
  So the YAML front matter for the code club site page looks like
  ```
  ---
  layout: project
  project: ccweb
  ---
  ```

Finally a few minor tweaks

- A list of projects now appears on a few pages, so this has been moved
  to `_includes/project_list.html` and included on the relevant pages
- Minor changes to the tags and categories of "How to make a blog post"
  tutorial so that it shows up on the code club website project page

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -15,9 +15,12 @@ layout: default
 
       <h3>About</h3>
 
-      <p>
-	{{project.description}}
-      </p>
+      <ul>
+	<li>Project Home: <a href="{{project.github}}">{{project.github}}</a></li>
+	{% if project.link %}
+	<li>Docuementation: <a href="{{project.link}}">{{project.link}}</a></li>
+	{% endif %}
+      </ul>
 
       {{content}}
 
@@ -33,7 +36,7 @@ layout: default
 
       <ul>
 	{% for post in tutorials %}
-	  {% if post.tags contains {{page.project}} and post.tags contains "getstarted"%}
+	  {% if post.tags contains {{project.tag}} and post.tags contains "getstarted"%}
 	     <li><a href="{{post.url}}">{{post.title}}</a></li>
 	  {% endif %}
         {% endfor %}
