Added blog pagination
We now have quite a few blog posts - and it's only going to get more in
the future, so we can now split the long lists of posts into many
shorter pages using jekyll's built in pagination features.

- This adds "Next" and "Previous" buttons to the bottom of each page in
  the blog (not the category pages)
- The html for the buttons is defined in `_includes/pagination_nav.html`

--- a/css/main.scss
+++ b/css/main.scss
@@ -43,11 +43,17 @@ $mobile: 600px;
   }
 }
 
+@mixin column-count($n) {
+    -webkit-column-count: $n;
+       -moz-column-count: $n;
+            column-count: $n;
+}
+
+
 @import "base",
 
         "_layouts/base",
         "_layouts/footer",
-        "_layouts/multicolumn",
         "_layouts/postlists",
         "_layouts/devices",
 
