--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -57,3 +57,24 @@ a {
 @include if-device($mobile) {
   .wrap { padding: 0 12px; }
 }
+
+.two-cols {
+  //@inlcude column-count(2);
+  -webkit-column-count: 2;
+     -moz-column-count: 2;
+          column-count: 2;
+}
+
+.pagination {
+
+  margin-top: 30px;
+
+  -webkit-column-count: 2;
+     -moz-column-count: 2;
+          column-count: 2;
+
+    .prev,
+    .next {
+      text-align: center;
+     }
+}
