--- a/_sass/_elements/_base.scss
+++ b/_sass/_elements/_base.scss
@@ -10,6 +10,13 @@
   padding: 10px
 }
 
+.pagination {
+  .prev,
+  .next {
+    background-color: $background-color;
+  }
+}
+
 .quote {
   color: orangered;
   text-align: center;
