Enabling check_html in tests
Running `rake test` will now also validate all the html we generate with
jekyll. This ensures that all out html is well formed and that there are
no surprises.

This also includes a few minor fixes to make sure that the tests pass.

Addresses #70

--- a/_includes/post_link.html
+++ b/_includes/post_link.html
@@ -5,5 +5,5 @@
         <span class="post-date">
 	  <p>{{ post.date | date: "%b %-d, %y" }}, Written by {{post.author}}</p>
 	</span>
-        <p>{{ post.excerpt }}</p>
+        {{ post.excerpt }}
       </li>
