--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -18,7 +18,7 @@ layout: default
       <ul>
 	<li>Project Home: <a href="{{project.github}}">{{project.github}}</a></li>
 	{% if project.link %}
-	<li>Docuementation: <a href="{{project.link}}">{{project.link}}</a></li>
+	<li>Documentation: <a href="{{project.link}}">{{project.link}}</a></li>
 	{% endif %}
       </ul>
 
